--- a/css/styles.css
+++ b/css/styles.css
@@ -229,9 +229,7 @@ width: 120px;
 
 }
 .documentation_page {
-background: #a8ff78;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background-image: url('https://i.imgur.com/PV4P5Sa.png');
 
 }
 #item-back {
