--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,7 @@ width: 120px;
 background-image: url('https://i.imgur.com/PV4P5Sa.png');
 
 }
+.MyDownloads_page {background-image: url('https://i.imgur.com/Ivd2Rtq.png');}
 #item-back {
   box-shadow: 0px 0px 150px -45px rgba(199, 147, 75, 0.7);
   margin-bottom: 20px;
