--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,10 @@ width: 120px;
 
 
 }
+.fancyboxfordle{
+  background: url("https://i.imgur.com/OSMst0P.png");
+ ;
+}
 .toast{
   background: url("https://i.imgur.com/1tHb2pA.jpg");
  ;
