--- a/css/styles.css
+++ b/css/styles.css
@@ -418,7 +418,7 @@ margin-left: -25px
   .menu ul li span {
     opacity: 0;
     position: absolute;
-    background: #302b63;
+    background: #e3e3e7;
     padding: 0.2em 0.5em;
     border-radius: 4px;
     top: 50%;
