--- a/css/styles.css
+++ b/css/styles.css
@@ -418,7 +418,7 @@ margin-left: -25px
   .menu ul li span {
     opacity: 0;
     position: absolute;
-    background: #e3e3e7;
+    background: #303030;
     padding: 0.2em 0.5em;
     border-radius: 4px;
     top: 50%;
@@ -435,7 +435,7 @@ margin-left: -25px
     left: -5px;
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
-    border-right: 5px solid #302b63;
+    border-right: 5px solid #303030;
     transform: translateY(-50%);
   }
   .menu ul li:hover span {
