--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ background: linear-gradient(-45deg, #1a2a6c, #b21f1f, #fdbb2d);
   box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.5);
 }
 .locandina {
-background: url('https://i.imgur.com/2UKZo8V.png');
+background: url('https://i.imgur.com/JNmPlT9.png');
 background-repeat: no-repeat;
 background-size: contain;
 display: block;
