--- a/css/styles.css
+++ b/css/styles.css
@@ -452,3 +452,16 @@ margin-left: -25px
   }
 }
 
+::-webkit-scrollbar {
+   width: 10px;          
+}
+ 
+::-webkit-scrollbar-thumb {   
+  border-radius: 10px;
+  background: -webkit-gradient(linear,left top,left bottom,from(#ff8a00),to(#da1b60));
+  box-shadow: inset 2px 2px 2px rgba(255,255,255,.25), inset -2px -2px 2px rgba(0,0,0,.25);}
+ 
+::-webkit-scrollbar-track {     
+  background-color: #fff;
+  background: linear-gradient(to right,#201c29,#201c29 1px,#100e17 1px,#100e17);
+}
